api get list routing keys
